tests/baselines/reference/TupleType4.errors.txt
TupleType4.ts(1,9): error TS1005: ']' expected.


==== TupleType4.ts (1 errors) ====
    var v: [
            
!!! error TS1005: ']' expected.